# Sistem-analysis

./: .env  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/api/endpoints/: reviews.py
app/models/: base.py  review.py
app/schemas/: review.py
app/services/: analysis.py
app/services/nlp/: aspects.py  sentiment.py
app/utils/: logging.py
app/workers/: tasks.py
docker/: Dockerfile
tests/: test_api.py
